@@ -1,0 +1,16 @@
+
+using System;
+
+namespace MonoDevelop.Database.Sql.Sqlite
+{
+	
+	
+	public partial class SqliteCreateDatabaseDialog : Gtk.Dialog
+	{
+		
+		public SqliteCreateDatabaseDialog()
+		{
+			this.Build();
+		}
+	}
+}
